Fixing broken styles

--- a/themes/qgis-theme/static/qgis-style.less
+++ b/themes/qgis-theme/static/qgis-style.less
@@ -954,54 +954,54 @@ img.align-right, .figure.align-right, object.align-right {
 .sponsor_img {
     float: left;
 }
-#qgissponsorsatom .sponsor_img.gold {
+#qgissustainingmembersatom .sponsor_img.gold {
     width: 300px;
 }
-#qgissponsorsatom .sponsor_img.silver {
+#qgissustainingmembersatom .sponsor_img.silver {
     width: 200px;
 }
-#qgissponsorsatom .sponsor_img.bronze {
+#qgissustainingmembersatom .sponsor_img.bronze {
     width: 90px;
 }
-#qgispastsponsorsatom .sponsor_img.gold {
+#qgispastsustainingmembersatom .sponsor_img.gold {
     width: 60px;
 }
-#qgispastsponsorsatom .sponsor_img.silver {
+#qgispastsustainingmembersatom .sponsor_img.silver {
     width: 60px;
 }
-#qgispastsponsorsatom .sponsor_img.bronze {
+#qgispastsustainingmembersatom .sponsor_img.bronze {
     width: 60px;
 }
-#qgissponsorsatom .sponsor_body.gold {
+#qgissustainingmembersatom .sponsor_body.gold {
     padding-left:330px;
 }
-#qgissponsorsatom .sponsor_body.silver {
+#qgissustainingmembersatom .sponsor_body.silver {
     padding-left:230px;
 }
-#qgissponsorsatom .sponsor_body.bronze {
+#qgissustainingmembersatom .sponsor_body.bronze {
     padding-left:120px;
 }
 
-#qgissponsorsatom h4 {
+#qgissustainingmembersatom h4 {
     font-size:22px;
 }
-#qgispastsponsorsatom .sponsor_body.gold {
+#qgispastsustainingmembersatom .sponsor_body.gold {
     padding-left:80px;
 }
-#qgispastsponsorsatom .sponsor_body.silver {
+#qgispastsustainingmembersatom .sponsor_body.silver {
     padding-left:80px;
 }
-#qgispastsponsorsatom .sponsor_body.bronze {
+#qgispastsustainingmembersatom .sponsor_body.bronze {
     padding-left:80px;
 }
-#qgispastsponsorsatom .sponsor_body {
+#qgispastsustainingmembersatom .sponsor_body {
     line-height:1rem;
     color: #bbb;
 }
-#qgispastsponsorsatom .sponsordiv {
+#qgispastsustainingmembersatom .sponsordiv {
     padding-top: 0px !important;
 }
-#qgispastsponsorsatom h4 {
+#qgispastsustainingmembersatom h4 {
     margin: 2px 0px !important;
     font-size: 12px;
     color: #bbb;
